--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 
                 <div style="font-family: 'Courier New', Courier, monospace; text-align: left; margin-right:20px;">
 
-                    CASTELLA PUBLISHING HOUSE
+                    CASTELLA.ART <img width="15px" style="position:relative;top: 2px;" src="cake.png"> : Creating a
+                    scientific framework for attaining nibbāna in this life. [Mobile App coming
+                    up soon.]
                     <br />
 
                     <br />
@@ -61,18 +63,44 @@
                 </div>
                 <div>
                     <br />
-                    First we imagine, <br />
-                    then we implement.
-                    <br />
-                    --------------------
+                    <!-- First we imagine, <br />
+                    then we implement. -->
+                    CASTELLA (カステ) is a delicious abbreviation for <img width="20px" style="position:relative;top: 3px;"
+                        src="cake.png">
                     <br /><br />
-
+                    <blockquote>
+                        <u>C</u>ategory-theoretical <u>A</u>pproach into <u>Ś</u>ūnyatā via the
+                        <u>T</u>opological
+                        induction of <u>E</u>quanimity & <u>L</u>iberation <u>L</u>attice unto nibbān<u>a</u>
+                    </blockquote>
                     <br />
+
+                    CASTELLA's aim is to lay the mathematical foundation that would help you in your spiritual journey
+                    into the
+                    deathless element, which is referred to as
+                    nibbāna (or nirvāṇa) in
+                    the Buddhist tradition.
+                    <br /><br />
+                    <div>
+                        <img src="Castella1.jpg.webp" / style="display:block;margin:auto;max-width:100%;width:400px">
+                    </div>
+                    <br /><br />
+                    {> As of 2024, The CASTELLA Mobile App is still in active development. Meanwhile, you can get
+                    yourself familiar with the Heart Sūtra. }
+
+                    <br /><br />
+                    <iframe style="display:block;margin:auto;max-width:100%;width:400px" width="560" height="315"
+                        src="https://www.youtube.com/embed/W48DX9V6MTc?si=_Z7B5F1TnFoz19BZ" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <br />
+
 
                     <!-- <blockquote style="font-size: 0.9em;">
 
                     </blockquote> -->
-                    <u>books</u>
+                    <!-- <u>books</u>
                     <br />
                     <br />
                     Build Yourself an ArchGPT (2025)
@@ -95,12 +123,12 @@
                     <br />
 
                     - <a href="https://0a.io" target="_blank">0a.io</a>: a proto-scientific sutra reader for the Pali
-                    Canon in Theravada Buddhism
+                    Canon in Theravada Buddhism -->
 
                 </div>
                 <br />
-                - ...
-                <br /><br /><br />
+                <!-- - ...
+                <br /><br /><br /> -->
                 <br /><br />
                 <!-- <CardGrid>
                     <LinkCard title="Authoring Markdown" href="/guides/authoring-content/" />
@@ -126,8 +154,8 @@
 
     <p style="text-align:center; font-size:0.8em; margin-top: 20px;">
 
-        © 2024 Castella Publishing House Private Limited <br />
-        Tanjong Rhu Rd, Singapore.
+        © 2024~2420 Castella Publishing House Private Limited <br />
+        Tanjong Rhu Rd, Singapore <img width="15px" style="position:relative;top: 2px;" src="cake.png">
     </p>
     <br />
     </div>
