--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                     </blockquote>
                     <br />
 
-                    CASTELLA's aim is to lay the mathematical foundation that would help you in your spiritual journey
-                    into the
+                    CASTELLA's aim is to lay the mathematical foundation to help you in your spiritual journey
+                    towards the
                     deathless element, which is referred to as
                     nibbāna (or nirvāṇa) in
                     the Buddhist tradition.
@@ -84,6 +84,17 @@
                     <div>
                         <img src="Castella1.jpg.webp" / style="display:block;margin:auto;max-width:100%;width:400px">
                     </div>
+                    <blockquote style="font-size:0.9em;line-height: 1.6em;">
+                        <i>"May I attain nibbāna in this life, and so I can put a full
+                            completion
+                            (圓滿; परिपूर्ण) into
+                            this
+                            app, and so may it bring loveliness into your life the same
+                            way the Japanese cake &nbsp;<img width="15px" style="position:relative;top: 2px;"
+                                src="cake.png">&nbsp; brightens up my
+                            day!" --- Archy
+                        </i>
+                    </blockquote>
                     <br /><br />
                     {> As of 2024, The CASTELLA Mobile App is still in active development. Meanwhile, you can get
                     yourself familiar with the Heart Sūtra. }
