--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
 
 
 
-    <p style="text-align:center; font-size:0.8em; margin-top: 20px;">
+    <!-- <p style="text-align:center; font-size:0.8em; margin-top: 20px;">
 
         © 2024~2420 Castella Publishing House Private Limited <br />
         Tanjong Rhu Rd, Singapore <img width="15px" style="position:relative;top: 2px;" src="cake.png">
-    </p>
+    </p> -->
     <br />
     </div>
 
