--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div style="font-family: 'Courier New', Courier, monospace; text-align: left; margin-right:20px;">
 
                     CASTELLA.ART <img width="15px" style="position:relative;top: 2px;" src="cake.png"> : Creating a
-                    scientific framework for attaining nibbāna in this life. [Mobile App coming
+                    scientific framework for attaining nibbāna in this life. <br /><br />[Open-Source Mobile App coming
                     up soon.]
                     <br />
 
@@ -81,6 +81,7 @@
                     nibbāna (or nirvāṇa) in
                     the Buddhist tradition.
                     <br /><br />
+
                     <div>
                         <img src="Castella1.jpg.webp" / style="display:block;margin:auto;max-width:100%;width:400px">
                     </div>
@@ -96,7 +97,8 @@
                         </i>
                     </blockquote>
                     <br /><br />
-                    {> As of 2024, The CASTELLA Mobile App is still in active development. Meanwhile, you can get
+                    {> As of 2024, The CASTELLA Mobile App is still in active development. Meanwhile, if you are new to
+                    the idea of Śūnyatā, you can get
                     yourself familiar with the Heart Sūtra. }
 
                     <br /><br />
@@ -106,6 +108,30 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <br />
+                    <br />
+                    { When one has familiarized oneself with the notion of Śūnyatā, the next step is to practice
+                    samatha-vipassanā meditation each day for the realization of the Seven Factors of Awakening (while
+                    aligning oneself on the Eightfold Path ☸️ - such is the Middle Way!) }
+                    <br /><br />
+                    <blockquote style="font-size:0.9em;"><i>
+                            “And what, bhikkhus, is the path leading to the unconditioned? Here, bhikkhus, a bhikkhu
+                            develops the enlightenment factor of mindfulness, which is based upon seclusion, dispassion,
+                            and cessation, maturing in release: this is called the path leading to the unconditioned….”
+                            <br /><br />
+                            “And what, bhikkhus, is the path leading to the unconditioned? Here, bhikkhus, a bhikkhu
+                            develops the enlightenment factor of discrimination of states … the enlightenment factor of
+                            energy … the enlightenment factor of rapture … the enlightenment factor of tranquillity …
+                            the
+                            enlightenment factor of concentration … the enlightenment factor of equanimity, which is
+                            based
+                            upon seclusion, dispassion, and cessation, maturing in release: this is called the path
+                            leading
+                            to the unconditioned….”</i>
+                        <br />
+                        <br /> -- <a
+                            href="https://suttacentral.net/sn43.12/en/bodhi?lang=en&reference=none&highlight=false">SN43.12
+                            vii-viii</a>
+                    </blockquote>
 
 
                     <!-- <blockquote style="font-size: 0.9em;">
