--- a/index.html
+++ b/index.html
@@ -132,6 +132,79 @@
                             href="https://suttacentral.net/sn43.12/en/bodhi?lang=en&reference=none&highlight=false">SN43.12
                             vii-viii</a>
                     </blockquote>
+                    <br />
+                    <br />
+
+                    { There are many nice sutras to read before samatha-vipassanā meditation practices. Below is one for
+                    example }
+
+                    <blockquote style="font-size:0.9em;">
+                        Thus have I heard. On one occasion the Blessed One was dwelling at Baraṇasi in the Deer Park
+                        at Isipatana. There the Blessed One addressed the bhikkhus of the group of five thus:
+                        “Bhikkhus!”<br />
+                        <br />
+
+                        “Venerable sir!” those bhikkhus replied. The Blessed One said this:<br />
+                        <br />
+
+                        “Bhikkhus, form is nonself. For if, bhikkhus, form were self, this form would not lead to
+                        affliction, and it would be possible to have it of form: ‘Let my form be thus; let my form
+                        not be thus.’ But because form is nonself, form leads to affliction, and it is not possible
+                        to have it of form: ‘Let my form be thus; let my form not be thus.’<br />
+                        <br />
+
+                        “Feeling is nonself…. … Perception is nonself…. Volitional formations are nonself….
+                        Consciousness is nonself. For if, bhikkhus, consciousness were self, this consciousness
+                        would not lead to affliction, and it would be possible to have it of consciousness: ‘Let my
+                        consciousness be thus; let my consciousness not be thus.’ But because consciousness is
+                        nonself, consciousness leads to affliction, and it is not possible to have it of
+                        consciousness: ‘Let my consciousness be thus; let my consciousness not be thus.’<br />
+                        <br />
+
+                        “What do you think, bhikkhus, is form permanent or impermanent?”—“Impermanent, venerable
+                        sir.”—“Is what is impermanent suffering or happiness?”—“Suffering, venerable sir.”—“Is what
+                        is impermanent, suffering, and subject to change fit to be regarded thus: ‘This is mine,
+                        this I am, this is my self’?”—“No, venerable sir.”<br />
+                        <br />
+
+                        “Is feeling permanent or impermanent?… Is perception permanent or impermanent?… Are
+                        volitional formations permanent or impermanent?… Is consciousness permanent or
+                        impermanent?”—“Impermanent, venerable sir.”—“Is what is impermanent suffering or
+                        happiness?”— “Suffering, venerable sir.”—“Is what is impermanent, suffering, and subject to
+                        change fit to be regarded thus: ‘This is mine, this I am, this is my self’?”—“No, venerable
+                        sir.”<br />
+                        <br />
+
+                        “Therefore, bhikkhus, any kind of form whatsoever, whether past, future, or present,
+                        internal or external, gross or subtle, inferior or superior, far or near, all form should be
+                        seen as it really is with correct wisdom thus: ‘This is not mine, this I am not, this is not
+                        my self.’<br />
+                        <br />
+
+                        “Any kind of feeling whatsoever … Any kind of perception whatsoever … Any kind of volitional
+                        formations whatsoever … Any kind of consciousness whatsoever, whether past, future, or
+                        present, internal or external, gross or subtle, inferior or superior, far or near, all
+                        consciousness should be seen as it really is with correct wisdom thus: ‘This is not mine,
+                        this I am not, this is not my self.’<br />
+                        <br />
+
+                        “Seeing thus, bhikkhus, the instructed noble disciple experiences revulsion towards form,
+                        revulsion towards feeling, revulsion towards perception, revulsion towards volitional
+                        formations, revulsion towards consciousness. Experiencing revulsion, he becomes
+                        dispassionate. Through dispassion his mind is liberated. When it is liberated there comes
+                        the knowledge: ‘It’s liberated.’ He understands: ‘Destroyed is birth, the holy life has been
+                        lived, what had to be done has been done, there is no more for this state of being.’”<br />
+                        <br />
+
+                        That is what the Blessed One said. Elated, those bhikkhus delighted in the Blessed One’s
+                        statement. And while this discourse was being spoken, the minds of the bhikkhus of the group
+                        of five were liberated from the taints by nonclinging.
+                        <br />
+                        <br />
+                        -- <a
+                            href="https://suttacentral.net/sn22.59/en/bodhi?lang=en&reference=none&highlight=false">SN22.59
+                            vii-viii</a>
+                    </blockquote>
 
 
                     <!-- <blockquote style="font-size: 0.9em;">
