--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <br />
                     <br />
                     { When one has familiarized oneself with the notion of Śūnyatā, the next step is to practice
-                    samatha-vipassanā meditation each day for the realization of the Seven Factors of Awakening (while
+                    samatha-vipassanā each day for the realization of the Seven Factors of Awakening (while
                     aligning oneself on the Eightfold Path ☸️ - such is the Middle Way!) }
                     <br /><br />
                     <blockquote style="font-size:0.9em;"><i>
@@ -135,7 +135,7 @@
                     <br />
                     <br />
 
-                    { There are many nice sutras to read before samatha-vipassanā meditation practices. Below is one for
+                    { There are many nice sutras to read before vipassanā meditation practices. Below is one for
                     example }
 
                     <blockquote style="font-size:0.9em;">
@@ -205,6 +205,16 @@
                             href="https://suttacentral.net/sn22.59/en/bodhi?lang=en&reference=none&highlight=false">SN22.59
                             vii-viii</a>
                     </blockquote>
+                    <br />
+                    <br />
+
+                    { Our first milestone is to enter the first <a
+                        href="https://en.wikipedia.org/wiki/Dhyana_in_Buddhism">dhyāna</a>. This is where the pragmatic
+                    aspect of the CASTELLA
+                    framework comes in, together with its mathematical formalization. [Coming up in 2025~2026] }
+
+                    <br />
+                    <br />
 
 
                     <!-- <blockquote style="font-size: 0.9em;">
