--- a/index.html
+++ b/index.html
@@ -208,10 +208,12 @@
                     <br />
                     <br />
 
-                    { Our first milestone is to enter the first <a
-                        href="https://en.wikipedia.org/wiki/Dhyana_in_Buddhism">dhyāna</a>. This is where the pragmatic
+                    { The first main milestone is <a
+                        href="https://en.wikipedia.org/wiki/Dhyana_in_Buddhism#The_r%C5%ABpa_jh%C4%81nas">to enter
+                        the first >dhyāna</a>. This is where the pragmatic
                     aspect of the CASTELLA
-                    framework comes in, together with its mathematical formalization. [Coming up in 2025~2026] }
+                    framework comes in, together with its mathematical formalization. [Currently still in active
+                    development; coming up in 2025~2026] }
 
                     <br />
                     <br />
