--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
                     { The first main milestone is <a
                         href="https://en.wikipedia.org/wiki/Dhyana_in_Buddhism#The_r%C5%ABpa_jh%C4%81nas">to enter
-                        the first >dhyāna</a>. This is where the pragmatic
+                        the first dhyāna</a>. This is where the pragmatic
                     aspect of the CASTELLA
                     framework comes in, together with its mathematical formalization. [Currently still in active
                     development; coming up in 2025~2026] }
