--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <br />
                     <br />
 
-                    { The first main milestone is <a
+                    { The first primary milestone is <a
                         href="https://en.wikipedia.org/wiki/Dhyana_in_Buddhism#The_r%C5%ABpa_jh%C4%81nas">to enter
                         the first dhyāna</a>. This is where the pragmatic
                     aspect of the CASTELLA
