--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <br />
                     { When one has familiarized oneself with the notion of Śūnyatā, the next step is to practice
                     samatha-vipassanā each day for the realization of the Seven Factors of Awakening (while
-                    aligning oneself on the Eightfold Path ☸️ - such is the Middle Way!) }
+                    aligning oneself on the Eightfold Path ☸️ - such is the Middle Way) }
                     <br /><br />
                     <blockquote style="font-size:0.9em;"><i>
                             “And what, bhikkhus, is the path leading to the unconditioned? Here, bhikkhus, a bhikkhu
