--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@
 
                     CASTELLA's aim is to lay the mathematical foundation to help you in your spiritual journey
                     towards the
-                    deathless element, which is referred to as
-                    nibbāna (or nirvāṇa) in
-                    the Buddhist tradition.
+                    deathless element via the understanding the true nature of reality, which transcends all forms,
+                    senses,
+                    perceptions and
+                    mental constructs. In
+                    the Buddhist tradition, deathless element is what is referred to as
+                    nibbāna or nirvāṇa.
                     <br /><br />
 
                     <div>
@@ -203,12 +206,13 @@
                         <br />
                         -- <a
                             href="https://suttacentral.net/sn22.59/en/bodhi?lang=en&reference=none&highlight=false">SN22.59
-                            vii-viii</a>
+                        </a>
                     </blockquote>
                     <br />
                     <br />
 
-                    { The first primary milestone is <a
+                    { Before one can go deeper into understanding the true nature of reality, a recommended first
+                    primary milestone is often <a
                         href="https://en.wikipedia.org/wiki/Dhyana_in_Buddhism#The_r%C5%ABpa_jh%C4%81nas">to enter
                         the first dhyāna</a>. This is where the pragmatic
                     aspect of the CASTELLA
