--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         src="cake.png">
                     <br /><br />
                     <blockquote>
-                        <u>C</u>ategory-theoretical <u>A</u>pproach into <u>Ś</u>ūnyatā via the
+                        <u>C</u>ategory-theoretical <u>A</u>pproach to <u>Ś</u>ūnyatā via the
                         <u>T</u>opological
                         induction of <u>E</u>quanimity & <u>L</u>iberation <u>L</u>attice unto nibbān<u>a</u>
                     </blockquote>
