--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     senses,
                     perceptions and
                     mental constructs. In
-                    the Buddhist tradition, deathless element is what is referred to as
+                    the Buddhist tradition, the deathless element is what is referred to as
                     nibbāna or nirvāṇa.
                     <br /><br />
 
