--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                     CASTELLA's aim is to lay the mathematical foundation to help you in your spiritual journey
                     towards the
-                    deathless element via understanding the true nature of reality, which transcends all forms,
+                    deathless element via fully understanding the true nature of reality, which transcends all forms,
                     senses,
                     perceptions and
                     mental constructs. In
