--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
                     <br />
                     <!-- First we imagine, <br />
                     then we implement. -->
-                    CASTELLA (カステ) is a delicious abbreviation for <img width="20px" style="position:relative;top: 3px;"
-                        src="cake.png">
+                    CASTELLA (カステ) is a delicious
+                    abbreviation for <img width="20px" style="position:relative;top: 3px;" src="cake.png"> <img
+                        width="20px" style="position:relative;top: 3px;" src="cake.png"> <img width="20px"
+                        style="position:relative;top: 3px;" src="cake.png">
                     <br /><br />
                     <blockquote>
                         <u>C</u>ategory-theoretical <u>A</u>pproach to <u>Ś</u>ūnyatā via the
@@ -77,7 +79,8 @@
 
                     CASTELLA's aim is to lay the mathematical foundation to help you in your spiritual journey
                     towards the
-                    deathless element via fully understanding the true nature of reality, which transcends all forms,
+                    deathless element via the total absolute understanding of the true nature of reality, which is said
+                    to transcend all forms,
                     senses,
                     perceptions and
                     mental constructs. In
@@ -95,6 +98,8 @@
                             this
                             app, and so may it bring loveliness into your life the same
                             way the Japanese cake &nbsp;<img width="15px" style="position:relative;top: 2px;"
+                                src="cake.png">&nbsp;<img width="15px" style="position:relative;top: 2px;"
+                                src="cake.png">&nbsp;<img width="15px" style="position:relative;top: 2px;"
                                 src="cake.png">&nbsp; brightens up my
                             day!" --- Archy
                         </i>
@@ -211,12 +216,15 @@
                     <br />
                     <br />
 
-                    { Before one can go deeper into understanding the true nature of reality, a recommended first
-                    primary milestone is often <a
-                        href="https://en.wikipedia.org/wiki/Dhyana_in_Buddhism#The_r%C5%ABpa_jh%C4%81nas">to enter
-                        the first dhyāna</a>. This is where the pragmatic
+                    { Before one can go deeper into understanding the true nature of reality, an often recommended first
+                    milestone is <a href="https://en.wikipedia.org/wiki/Dhyana_in_Buddhism#The_r%C5%ABpa_jh%C4%81nas">to
+                        enter
+                        the first dhyāna</a> && this is where the pragmatic
                     aspect of the CASTELLA
-                    framework comes in, together with its mathematical formalization. [Currently still in active
+                    framework comes in <img width="19px" style="position:relative;top: 3px;" src="cake.png">&nbsp;<img
+                        width="19px" style="position:relative;top: 3px;" src="cake.png">&nbsp;<img width="19px"
+                        style="position:relative;top: 3px;" src="cake.png">&nbsp; ,
+                    together with its mathematical formalization. [Currently still in active
                     development; coming up in 2025~2026] }
 
                     <br />
