--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                     to transcend all forms,
                     senses,
                     perceptions and
-                    mental constructs. In
-                    the Buddhist tradition, the deathless element is what is referred to as
-                    nibbāna or nirvāṇa.
+                    mental constructs. The deathless element is what is referred to as
+                    nibbāna (or nirvāṇa) in
+                    the Buddhist tradition.
                     <br /><br />
 
                     <div>
