--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
         blockquote {
             background-color: #f9f9f9;
-            padding: 20px;
+            padding: 13px;
+            margin: 22px 8px;
             border-left: 5px solid #ccc;
         }
 
@@ -104,12 +105,12 @@
                             day!" --- Archy
                         </i>
                     </blockquote>
-                    <br /><br />
+                    <br />
                     {> As of 2024, The CASTELLA Mobile App is still in active development. Meanwhile, if you are new to
                     the idea of Śūnyatā, you can get
                     yourself familiar with the Heart Sūtra. }
 
-                    <br /><br />
+                    <br /><br /> <br />
                     <iframe style="display:block;margin:auto;max-width:100%;width:400px" width="560" height="315"
                         src="https://www.youtube.com/embed/W48DX9V6MTc?si=_Z7B5F1TnFoz19BZ" title="YouTube video player"
                         frameborder="0"
