--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 
                     CASTELLA's aim is to lay the mathematical foundation to help you in your spiritual journey
                     towards the
-                    deathless element via the total absolute understanding of the true nature of reality, which is said
+                    deathless element via the total absolute understanding (and experiencing) of the true nature of
+                    reality, which is said
                     to transcend all forms,
                     senses,
                     perceptions and
