--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                 <div style="font-family: 'Courier New', Courier, monospace; text-align: left; margin-right:20px;">
 
                     CASTELLA.ART <img width="15px" style="position:relative;top: 2px;" src="cake.png"> : Creating a
-                    scientific framework for attaining nibbāna in this life. <br /><br />[Open-Source Mobile App coming
+                    mathematical framework for attaining nibbāna in this life. <br /><br />[Open-Source Mobile App
+                    coming
                     up soon.]
                     <br />
 
@@ -75,17 +76,19 @@
                         <u>C</u>ategory-theoretical <u>A</u>pproach to <u>Ś</u>ūnyatā via the
                         <u>T</u>opological
                         induction of <u>E</u>quanimity & <u>L</u>iberation <u>L</u>attice unto nibbān<u>a</u>
+                        <img style="display:block;margin:auto;max-width:100%;width:400px" src="y.png" />
+
                     </blockquote>
                     <br />
 
                     CASTELLA's aim is to lay the mathematical foundation to help you in your spiritual journey
                     towards the
                     deathless element via the total absolute understanding (and experiencing) of the true nature of
-                    reality, which is said
+                    reality ...which is said
                     to transcend all forms,
                     senses,
                     perceptions and
-                    mental constructs. The deathless element is what is referred to as
+                    mental constructs... the deathless element is what is referred to as
                     nibbāna (or nirvāṇa) in
                     the Buddhist tradition.
                     <br /><br />
