--- a/index.html
+++ b/index.html
@@ -73,9 +73,13 @@
                         style="position:relative;top: 3px;" src="cake.png">
                     <br /><br />
                     <blockquote>
-                        <u>C</u>ategory-theoretical <u>A</u>pproach to <u>Ś</u>ūnyatā via the
+                        <a
+                            href="https://ncatlab.org/nlab/show/category+theory#section_Idea"><u>C</u>ategory-theoretical</a>
+                        <u>A</u>pproach to <u>Ś</u>ūnyatā via the
                         <u>T</u>opological
-                        induction of <u>E</u>quanimity & <u>L</u>iberation <u>L</u>attice unto nibbān<u>a</u>
+                        induction of <u>E</u>quanimity & <u>L</u>iberation <a
+                            href="https://ncatlab.org/nlab/show/lattice#definition"><u>L</u>attice</a> unto
+                        nibbān<u>a</u>
                         <img style="display:block;margin:auto;max-width:100%;width:400px" src="y.png" />
 
                     </blockquote>
