--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
         a {
             color: #0070f3;
+            text-decoration: inherit !important
         }
     </style>
 
@@ -45,7 +46,8 @@
 
                 <div style="font-family: 'Courier New', Courier, monospace; text-align: left; margin-right:20px;">
 
-                    CASTELLA.ART <img width="15px" style="position:relative;top: 2px;" src="cake.png"> : Creating a
+                    <a href="https://castella.art">CASTELLA.ART <img width="15px" style="position:relative;top: 2px;"
+                            src="cake.png"></a> : Creating a
                     mathematical framework for attaining nibbāna in this life. <br /><br />[Open-Source Mobile App
                     coming
                     up soon.]
@@ -68,17 +70,21 @@
                     <!-- First we imagine, <br />
                     then we implement. -->
                     CASTELLA (カステ) is a delicious
-                    abbreviation for <img width="20px" style="position:relative;top: 3px;" src="cake.png"> <img
-                        width="20px" style="position:relative;top: 3px;" src="cake.png"> <img width="20px"
-                        style="position:relative;top: 3px;" src="cake.png">
+                    abbreviation for
                     <br /><br />
                     <blockquote>
-                        <a
-                            href="https://ncatlab.org/nlab/show/category+theory#section_Idea"><u>C</u>ategory-theoretical</a>
-                        <u>A</u>pproach to <u>Ś</u>ūnyatā via the
-                        <u>T</u>opological
-                        induction of <u>E</u>quanimity & <u>L</u>iberation <a
-                            href="https://ncatlab.org/nlab/show/lattice#definition"><u>L</u>attice</a> unto
+                        <a href="https://ncatlab.org/nlab/show/category+theory#section_Idea"
+                            style="text-decoration: inherit;"><u>C</u>ategory-theoretical
+                            <u>A</u>pproach <img width="16px" style="position:relative;top: 2px; margin-right: 3px;"
+                                src="cake.png" /></a>
+                        to <u>Ś</u>ūnyatā via the
+                        <a href="https://ncatlab.org/nlab/show/Introduction+to+Topology"
+                            style="text-decoration: inherit;"><u>T</u>opological
+                            induction <img width="16px" style="position:relative;top: 2px; margin-right: 3px;"
+                                src="cake.png" /></a> of
+                        <u>E</u>quanimity & <u>L</u>iberation <a href="https://ncatlab.org/nlab/show/lattice#definition"
+                            style="text-decoration: inherit;"><u>L</u>attice <img width="16px"
+                                style="position:relative;top: 2px; margin-right: 3px;" src="cake.png" /></a> unto
                         nibbān<u>a</u>
                         <img style="display:block;margin:auto;max-width:100%;width:400px" src="y.png" />
 
@@ -106,10 +112,11 @@
                             (圓滿; परिपूर्ण) into
                             this
                             app, and so may it bring loveliness into your life the same
-                            way the Japanese cake &nbsp;<img width="15px" style="position:relative;top: 2px;"
-                                src="cake.png">&nbsp;<img width="15px" style="position:relative;top: 2px;"
-                                src="cake.png">&nbsp;<img width="15px" style="position:relative;top: 2px;"
-                                src="cake.png">&nbsp; brightens up my
+                            way <a href="https://en.wikipedia.org/wiki/Castella">the Japanese cake &nbsp;<img
+                                    width="15px" style="position:relative;top: 2px;" src="cake.png">&nbsp;<img
+                                    width="15px" style="position:relative;top: 2px;" src="cake.png">&nbsp;<img
+                                    width="15px" style="position:relative;top: 2px;" src="cake.png"></a>&nbsp; brightens
+                            up my
                             day!" --- Archy
                         </i>
                     </blockquote>
@@ -147,7 +154,8 @@
                         <br />
                         <br /> -- <a
                             href="https://suttacentral.net/sn43.12/en/bodhi?lang=en&reference=none&highlight=false">SN43.12
-                            vii-viii</a>
+                            vii-viii <img width="16px" style="position:relative;top: 2px; margin-right: 3px;"
+                                src="cake.png" /></a>
                     </blockquote>
                     <br />
                     <br />
@@ -220,6 +228,7 @@
                         <br />
                         -- <a
                             href="https://suttacentral.net/sn22.59/en/bodhi?lang=en&reference=none&highlight=false">SN22.59
+                            <img width="16px" style="position:relative;top: 2px; margin-right: 3px;" src="cake.png" />
                         </a>
                     </blockquote>
                     <br />
@@ -228,11 +237,10 @@
                     { Before one can go deeper into understanding the true nature of reality, an often recommended first
                     milestone is <a href="https://en.wikipedia.org/wiki/Dhyana_in_Buddhism#The_r%C5%ABpa_jh%C4%81nas">to
                         enter
-                        the first dhyāna</a> && this is where the pragmatic
+                        the first dhyāna <img width="16px" style="position:relative;top: 2px; margin-right: 3px;"
+                            src="cake.png" /></a> && this is where the pragmatic
                     aspect of the CASTELLA
-                    framework comes in <img width="19px" style="position:relative;top: 3px;" src="cake.png">&nbsp;<img
-                        width="19px" style="position:relative;top: 3px;" src="cake.png">&nbsp;<img width="19px"
-                        style="position:relative;top: 3px;" src="cake.png">&nbsp; ,
+                    framework comes in,
                     together with its mathematical formalization. [Currently still in active
                     development; coming up in 2025~2026] }
 
