--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
                 <div style="font-family: 'Courier New', Courier, monospace; text-align: left; margin-right:20px;">
 
-                    <a href="https://castella.art">CASTELLA.ART <img width="15px" style="position:relative;top: 2px;"
-                            src="cake.png"></a> : Creating a
+                    <a href="https://castella.art">CASTELLA.ART<img width="15px"
+                            style="position:relative; margin-left:4px; top: 2px;" src="cake.png"></a> : Creating a
                     mathematical framework for attaining nibbāna in this life. <br /><br />[Open-Source Mobile App
                     coming
                     up soon.]
